SDKs/apideck.com/file-storage/8.85.0/java/README.md
# openapisdk

<!-- Start SDK Installation -->
## SDK Installation

### Gradle

```groovy
implementation 'openapisdk:openapisdk:0.0.1'
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```java
package hello.world;

import openapisdk.SDK;
import openapisdk.models.shared.Security;

public class Application {
    public static void main(String[] args) {
        try {
            SDK.Builder builder = SDK.builder();

            builder.setSecurity(
                new Security() {{
                    apiKey = new SchemeApiKey() {{
                        apiKey = "YOUR_API_KEY_HERE";
                    }};
                }}
            );

            SDK sdk = builder.build();

            DriveGroupsAddRequest req = new DriveGroupsAddRequest() {{
                security = new DriveGroupsAddSecurity() {{
                    apiKey = new SchemeApiKey() {{
                        apiKey = "YOUR_API_KEY_HERE";
                    }};
                }};
                queryParams = new DriveGroupsAddQueryParams() {{
                    raw = false;
                }};
                headers = new DriveGroupsAddHeaders() {{
                    xApideckAppId = "voluptas";
                    xApideckConsumerId = "culpa";
                    xApideckServiceId = "expedita";
                }};
                request = new DriveGroupInput() {{
                    description = "consequuntur";
                    displayName = "dolor";
                    name = "expedita";
                }};
            }};

            DriveGroupsAddResponse res = sdk.driveGroups.driveGroupsAdd(req);

            if (res.createDriveGroupResponse.isPresent()) {
                // handle response
            }
        } catch (Exception e) {
            // handle exception
        }
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations

### Drive Groups

* `driveGroupsAdd` - Create DriveGroup
* `driveGroupsAll` - List DriveGroups
* `driveGroupsDelete` - Delete DriveGroup
* `driveGroupsOne` - Get DriveGroup
* `driveGroupsUpdate` - Update DriveGroup

### Drives

* `drivesAdd` - Create Drive
* `drivesAll` - List Drives
* `drivesDelete` - Delete Drive
* `drivesOne` - Get Drive
* `drivesUpdate` - Update Drive

### Files

* `filesAll` - List Files
* `filesDelete` - Delete File
* `filesDownload` - Download File
* `filesOne` - Get File
* `filesSearch` - Search Files

### Folders

* `foldersAdd` - Create Folder
* `foldersCopy` - Copy Folder
* `foldersDelete` - Delete Folder
* `foldersOne` - Get Folder
* `foldersUpdate` - Rename or move Folder

### Shared Links

* `sharedLinksAdd` - Create Shared Link
* `sharedLinksAll` - List SharedLinks
* `sharedLinksDelete` - Delete Shared Link
* `sharedLinksOne` - Get Shared Link
* `sharedLinksUpdate` - Update Shared Link

### Upload Sessions

* `uploadSessionsAdd` - Start Upload Session
* `uploadSessionsDelete` - Abort Upload Session
* `uploadSessionsFinish` - Finish Upload Session
* `uploadSessionsOne` - Get Upload Session
* `uploadSessionsUpload` - Upload part of File to Upload Session

<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
